job-outs/repro_Suri10dmgparal_pureoriginal2/xia_0.0002_xip_0.025_PSI0_0.005_PSI1_0.5/mercury_post_4.err
  File "/home/bcheng4/TwoCapital_Shrink/abatement/postdamage_spe_xi_psi_gammalist_name2.py", line 226
    smart_guess=Guess,        
    ^
SyntaxError: invalid syntax
